[gd_scene load_steps=14 format=2]

[ext_resource path="res://Start/startscreen.png" type="Texture" id=1]
[ext_resource path="res://Start/p1.png" type="Texture" id=2]
[ext_resource path="res://Start/ButtonPurple.png" type="Texture" id=3]
[ext_resource path="res://Start/p2.png" type="Texture" id=4]
[ext_resource path="res://Start/ButtonYellow.png" type="Texture" id=5]
[ext_resource path="res://Start/kenvector_future.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Start/audioOff.png" type="Texture" id=7]
[ext_resource path="res://Start/audioOn.png" type="Texture" id=8]
[ext_resource path="res://Start/Start.gd" type="Script" id=9]
[ext_resource path="res://BGMPlayer/Imagine Dragons, twocolors-01-Bones (twocolors Remix).mp3" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Startscreen" type="Sprite" parent="."]
position = Vector2( 513.7, 299 )
scale = Vector2( 0.802031, 0.7525 )
texture = ExtResource( 1 )

[node name="P1" type="Sprite" parent="."]
position = Vector2( 285, 402 )
texture = ExtResource( 2 )

[node name="P2" type="Sprite" parent="."]
position = Vector2( 757, 402 )
texture = ExtResource( 4 )

[node name="HowToPlay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ButtonPurple" type="Sprite" parent="HowToPlay"]
position = Vector2( 311, 178 )
scale = Vector2( 0.218029, 0.211604 )
texture = ExtResource( 3 )

[node name="HowToPlayButton" type="MenuButton" parent="HowToPlay"]
margin_left = 223.0
margin_top = 136.0
margin_right = 399.0
margin_bottom = 212.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "HowToPlay"

[node name="Play" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ButtonYellow" type="Sprite" parent="Play"]
position = Vector2( 500, 348 )
scale = Vector2( 0.297707, 0.289402 )
texture = ExtResource( 5 )

[node name="PlayButton" type="MenuButton" parent="Play"]
margin_left = 453.0
margin_top = 270.0
margin_right = 559.0
margin_bottom = 381.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Play"

[node name="Exit" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ButtonPurple" type="Sprite" parent="Exit"]
position = Vector2( 724, 178 )
scale = Vector2( 0.21436, 0.21331 )
texture = ExtResource( 3 )

[node name="ExitButton" type="MenuButton" parent="Exit"]
margin_left = 641.0
margin_top = 135.0
margin_right = 807.0
margin_bottom = 218.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Exit"

[node name="Music" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="AudioOn" type="Sprite" parent="Music"]
position = Vector2( 89, 516 )
texture = ExtResource( 8 )

[node name="AudioOff" type="Sprite" parent="Music"]
visible = false
position = Vector2( 89, 517 )
texture = ExtResource( 7 )

[node name="MusicButton" type="MenuButton" parent="Music"]
margin_left = 52.0
margin_top = 479.0
margin_right = 127.0
margin_bottom = 558.0

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[connection signal="pressed" from="Play/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Exit/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Music/MusicButton" to="." method="_on_MusicButton_pressed"]
